Fixed avg color calculation

--- a/playground/Preprocessing 1.ipynb
+++ b/playground/Preprocessing 1.ipynb
@@ -56,7 +56,7 @@
     "    return resized_images\n",
     "  \n",
     "  def get_avg_colors(self, images):\n",
-    "    return [np.mean(img) for img in images]"
+    "    return [np.mean(img, axis=(0,1)) for img in images]"
    ]
   },
   {
