Updated flatten_distribution and changed the old constants (in KNN folder) to download 299x299 images instead.

--- a/CNN/playground/flatten_distribution.ipynb
+++ b/CNN/playground/flatten_distribution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -39,8 +39,6 @@
     "    \n",
     "# The initial, skewed distribution of labels that we want to even out\n",
     "label_dist = np.sum(all_labels, axis=0) \n",
-    "no_labels_init = np.sum(label_dist)\n",
-    "Z_init = np.sum(np.exp(-label_dist/no_labels_init))/N_labels\n",
     "plt.bar(np.linspace(0,N_labels-1,N_labels),label_dist)\n",
     "plt.show()"
    ]
@@ -108,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -126,10 +124,11 @@
      "output_type": "stream",
      "text": [
       "Final no. images:  1500\n",
+      "Number of augmented images:  500\n",
       "Inititial Z-value:  0.9960082836330797\n",
       "Final Z-value:  0.9960080388317579\n",
       "Smallest possible Z:  0.9960079893439915\n",
-      "Total runtime:  1.741882562637329\n",
+      "Total runtime:  1.3778958320617676\n",
       "Ratio of tried to accepted augmentations:  0.35765379113018597\n"
      ]
     }
@@ -137,20 +136,23 @@
    "source": [
     "# Augment with images depending on how much they contribute to flatten the distribution of labels\n",
     "\n",
-    "ratio = 1.5 # ratio of the final and initial number of images \n",
-    "N_imgs_max = N_imgs*ratio\n",
+    "# Record initial value of Z-score\n",
+    "no_labels_init = np.sum(label_dist)\n",
+    "Z_init = np.sum(np.exp(-label_dist/no_labels_init))/N_labels\n",
+    "\n",
+    "frac = 0.5 # how large a fraction we want to extend the dataset with\n",
+    "max_augments = N_imgs*frac\n",
     "\n",
     "# Counters\n",
     "c_tot = 0\n",
     "c_aug = 0\n",
     "\n",
     "t1 = time.time()\n",
-    "while N_imgs < N_imgs_max:\n",
+    "while c_aug < max_augments:\n",
     "    \n",
-    "    for k in range(N_imgs): # doesn't loop through the ones appended during the current loop        \n",
+    "    for k in range(N_imgs): \n",
     "        # Check if we have enough images\n",
-    "        N_imgs_now = all_labels.shape[0]\n",
-    "        if N_imgs_now == N_imgs_max:\n",
+    "        if c_aug >= max_augments:\n",
     "            break\n",
     "        \n",
     "        no_labels = np.sum(label_dist)\n",
@@ -162,23 +164,22 @@
     "        Z_aug = np.exp(-label_dist_aug/no_labels_aug).sum()/N_labels # \"energy\" of system after augmentation\n",
     "        # Apply change if \"energy\" is lowered\n",
     "        if Z_aug < Z:\n",
-    "            c_aug += 1\n",
     "            all_labels = all_labels_aug\n",
     "            label_dist = np.sum(all_labels, axis=0) # update the distribution of labels\n",
+    "            c_aug += 1\n",
     "        #elif  # chance to augment anyways\n",
     "        \n",
     "        c_tot += 1\n",
-    "\n",
-    "    N_imgs = all_labels.shape[0] # update how many images there are after the just finished round of augmentation\n",
+    "t2 = time.time()\n",
     "\n",
     "# The final, non-skewed distribution of labels\n",
     "label_dist = np.sum(all_labels, axis=0) \n",
     "plt.bar(np.linspace(0,N_labels-1,N_labels),label_dist)\n",
     "plt.show()\n",
     "\n",
-    "t2 = time.time()\n",
     "\n",
-    "print('Final no. images: ', N_imgs)\n",
+    "print('Final no. images: ', N_imgs + c_aug)\n",
+    "print('Number of augmented images: ', c_aug)\n",
     "print('Inititial Z-value: ', Z_init)\n",
     "print('Final Z-value: ', Z)\n",
     "min_Z = np.exp(-1/N_labels) # for a completely even distribution\n",
