scraper updated, ready for azure

--- a/CNN/src/scraper.ipynb
+++ b/CNN/src/scraper.ipynb
@@ -11,8 +11,7 @@
     "DOWNLOAD_AMOUNT = 500 # set to none for unlimited \n",
     "LABELS_PATH = '../data/labels/'\n",
     "LABEL_CNT = 228\n",
-    "IMG_SIZE = 299\n",
-    "OUT_FILE = '../data/images.hdf5'"
+    "IMG_SIZE = 299"
    ]
   },
   {
@@ -102,101 +101,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Set up h5 file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "train_shape = (len(train_ids_urls), 299, 299, 3)\n",
-    "val_shape = (len(val_ids_urls), 299, 299, 3)\n",
-    "test_shape = (len(test_ids_urls), 299, 299, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hdf5_file = h5py.File(OUT_FILE, mode='w')\n",
-    "hdf5_file.create_dataset(\"train_img\", train_shape, np.uint8, chunks=True)\n",
-    "hdf5_file.create_dataset(\"val_img\", val_shape, np.uint8, chunks=True)\n",
-    "hdf5_file.create_dataset(\"test_img\", test_shape, np.uint8, chunks=True)\n",
-    "hdf5_file.create_dataset(\"train_labels\", (len(train_ids_urls), LABEL_CNT), np.int8)\n",
-    "hdf5_file[\"train_labels\"][...] = [labels for (id, labels) in train_ids_labels]\n",
-    "hdf5_file.create_dataset(\"val_labels\", (len(val_ids_urls), LABEL_CNT), np.int8)\n",
-    "hdf5_file[\"val_labels\"][...] = [labels for (id, labels) in val_ids_labels]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Load Images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def download_image(id_url):\n",
-    "    id, url = id_url\n",
-    "    http = urllib3.PoolManager(retries=Retry(connect=3, read=2, redirect=3))\n",
-    "    response = http.request(\"GET\", url)\n",
-    "    image = Image.open(io.BytesIO(response.data))\n",
-    "    image = image.resize((IMG_SIZE, IMG_SIZE))\n",
-    "    image_rgb = image.convert(\"RGB\")\n",
-    "    return (id, np.array(image_rgb))\n",
+    "def download_image(id_url_fname):\n",
+    "    id, url, fname = id_url_fname\n",
+    "    if not os.path.exists(fname):\n",
+    "        http = urllib3.PoolManager(retries=Retry(connect=3, read=2, redirect=3))\n",
+    "        response = http.request(\"GET\", url)\n",
+    "        image = Image.open(io.BytesIO(response.data))\n",
+    "        image = image.resize((IMG_SIZE, IMG_SIZE))\n",
+    "        image_rgb = image.convert(\"RGB\")\n",
+    "        image_rgb.save(fname, format='JPEG', quality=90)\n",
+    "    return\n",
     "    \n",
     "\n",
-    "def download(ids_urls, h5_dataset):\n",
+    "def download(ids_urls, outdir):\n",
+    "    if not os.path.exists(outdir):\n",
+    "        os.mkdir(outdir)\n",
+    "    params = [(id, url, os.path.join(outdir, \"{}.jpg\".format(id))) for (id, url) in ids_urls]\n",
     "    pool = multiprocessing.Pool(processes=30)\n",
     "    with tqdm(total=len(ids_urls)) as progress_bar:\n",
-    "        for id, img in pool.imap_unordered(download_image, ids_urls):\n",
-    "            h5_dataset[int(id) - 1, ...] = img\n",
+    "        for _ in pool.imap_unordered(download_image, params):\n",
     "            progress_bar.update(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:08<00:00, 55.70it/s]\n",
-      "100%|██████████| 500/500 [00:09<00:00, 55.01it/s]\n",
-      "100%|██████████| 500/500 [00:12<00:00, 41.36it/s]\n"
+      "100%|██████████| 500/500 [00:05<00:00, 84.51it/s]\n",
+      "100%|██████████| 500/500 [00:06<00:00, 80.73it/s]\n",
+      "100%|██████████| 500/500 [00:06<00:00, 82.77it/s]\n"
      ]
     }
    ],
    "source": [
-    "download(train_ids_urls, hdf5_file[\"train_img\"])\n",
-    "download(val_ids_urls, hdf5_file[\"val_img\"])\n",
-    "download(test_ids_urls, hdf5_file[\"test_img\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "hdf5_file.close()"
+    "if not os.path.exists('../data/raw_images/'):\n",
+    "    os.mkdir('../data/raw_images/')\n",
+    "download(train_ids_urls, '../data/raw_images/train/')\n",
+    "download(val_ids_urls, '../data/raw_images/validation/')\n",
+    "download(test_ids_urls, '../data/raw_images/test/')"
    ]
   }
  ],
