scraper and cnn feature extraction set up on azure

--- a/CNN/src/scraper.ipynb
+++ b/CNN/src/scraper.ipynb
@@ -1,14 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scraper\n",
+    "downloads all images."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "DOWNLOAD_AMOUNT = 500 # set to none for unlimited \n",
+    "DOWNLOAD_AMOUNT = None # set to none for unlimited \n",
     "LABELS_PATH = '../data/labels/'\n",
     "LABEL_CNT = 228\n",
     "IMG_SIZE = 299"
@@ -17,16 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
     "import zipfile\n",
     "import json\n",
-    "import h5py\n",
     "import urllib3\n",
     "import multiprocessing\n",
     "from PIL import Image\n",
@@ -46,9 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def parse(fname, path, max_parse=None):\n",
@@ -87,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_ids_urls, train_ids_labels = parse('train.json', LABELS_PATH, max_parse=DOWNLOAD_AMOUNT)\n",
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,16 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:05<00:00, 84.51it/s]\n",
-      "100%|██████████| 500/500 [00:06<00:00, 80.73it/s]\n",
-      "100%|██████████| 500/500 [00:06<00:00, 82.77it/s]\n"
+      " 91%|█████████ | 923367/1014544 [25:32<16:53, 89.98it/s]   "
      ]
     }
    ],
@@ -172,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
