--- a/CNN/src/CNN_feature_extraction.ipynb
+++ b/CNN/src/CNN_feature_extraction.ipynb
@@ -54,18 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_images(raw_images_dir, start, end):\n",
     "    images = np.zeros((end - start, 299, 299, 3))\n",
     "    for i in range(start, end):\n",
-    "        image = load_img(os.path.join(raw_images_dir, \"{}.jpg\".format(i)) , target_size= (299, 299))\n",
-    "        image = img_to_array(image)\n",
-    "        image = np.expand_dims(image, axis=0)\n",
-    "        image = preprocess_input(image)\n",
-    "        images[i- start] = image[0]\n",
+    "        try:\n",
+    "            image = load_img(os.path.join(raw_images_dir, \"{}.jpg\".format(i)) , target_size= (299, 299))\n",
+    "            image = img_to_array(image)\n",
+    "            image = np.expand_dims(image, axis=0)\n",
+    "            image = preprocess_input(image)\n",
+    "            images[i- start] = image[0]\n",
+    "        except:\n",
+    "            print('WARNING: failed to access image %i' % i)\n",
     "    return images\n",
     "        "
    ]
