Full model notebook

--- a/CNN/playground/Full_Model.ipynb
+++ b/CNN/playground/Full_Model.ipynb
@@ -375,7 +375,14 @@
       "8/8 [==============================] - 86s 11s/step - loss: 24.0157 - acc: 0.1338 - f1: 0.3977\n",
       "Epoch 2/2\n",
       "8/8 [==============================] - 80s 10s/step - loss: 23.8662 - acc: 0.1353 - f1: 0.4025\n",
-      "Iteration: 3\n"
+      "Iteration: 3\n",
+      "x_train shape:  (4000, 299, 299, 3)\n",
+      "y_train shape:  (4000, 229)\n",
+      "Fine-tuning full model..\n",
+      "Epoch 1/2\n",
+      "8/8 [==============================] - 87s 11s/step - loss: 23.8294 - acc: 0.1345 - f1: 0.4007\n",
+      "Epoch 2/2\n",
+      "1/8 [==>...........................] - ETA: 1:11 - loss: 23.8034 - acc: 0.1280 - f1: 0.3977"
      ]
     }
    ],
