saved from server

--- a/CNN/src/CNN_feature_extraction.ipynb
+++ b/CNN/src/CNN_feature_extraction.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lsda/lsdaenv/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -34,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 500"
+    "BATCH_SIZE = 250"
    ]
   },
   {
@@ -47,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# used to build features\n",
     "MODEL = Sequential()\n",
     "MODEL.add(InceptionV3(weights=\"imagenet\", include_top=False))\n",
     "MODEL.add(AveragePooling2D(pool_size=(8,8), strides=None, padding='valid', data_format=None))"
@@ -54,7 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# used in full model\n",
+    "MODEL = Sequential()\n",
+    "incep_model = InceptionV3(weights=\"imagenet\",\n",
+    "                          include_top=False,\n",
+    "                          input_shape=(299, 299, 3))\n",
+    "MODEL.add(incep_model)\n",
+    "MODEL.add(AveragePooling2D(pool_size=(8,8)))\n",
+    "MODEL.add(Flatten())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,15 +142,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9897/9897 [03:33<00:00, 43.54it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists('../data/features/'):\n",
     "    os.mkdir('../data/features/')\n",
     "extract('../data/raw_images/validation/', '../data/features/validation/')\n",
-    "extract('../data/raw_images/train/', '../data/features/train/')\n",
-    "extract('../data/raw_images/test/', '../data/features/test/')"
+    "#extract('../data/raw_images/train/', '../data/features/train/')\n",
+    "#extract('../data/raw_images/test/', '../data/features/test/')"
    ]
   }
  ],
